# voter-tools

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/pa/: field-definitions.xlsx
docs/pa/examples/: error-values.xml  full-voter-app-by-hand-1.xml  full-voter-app-by-hand-2.xml  full-voter-app-with-signature.xml  setup-response.xml  xml-template.xml
tests/: __init__.py  test_voter_tools.py
tests/pa/: __init__.py  test_client.py  test_img_url.txt  test_live.py
voter_tools/: __init__.py  cli.py  ga.py  mi.py  pa.aspdata.txt  tool.py  wi.py
voter_tools/pa/: check.py  client.py  errors.py  zipcodes.pa.csv  zipcodes.py
