[project]
description = "Tools for online voter registration in the United States of America"
name = "voter-tools"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Dave Peck", email = "dave@frontseat.org" }]
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
build = ["setuptools", "wheel", "build"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
vote = "voter_tools.cli:vote"

[tool.mypy]
exclude = [".venv", "build"]
ignore_missing_imports = true
disallow_untyped_defs = false
show_error_codes = true

[tool.ruff]
exclude = [".venv", "build"]

[tool.ruff.lint]
extend-select = [
  "E", # style errors
  "D", # pydocstyle
  "C", # flake8-comprehensions
  "B", # flake8-bugbear
]
extend-ignore = [
  "D100", # Allow missing docstring in public module
  "D203", # Instead, use D211 (zero blank lines before class docstring)
  "D212", # Instead, use D213 (start multi-line summaries on the second line)
]

[project.urls]
Homepage = "https://github.com/front-seat/voter-tools"
Changelog = "https://github.com/front-seat/voter-tools/releases"
Issues = "https://github.com/front-seat/voter-tools/issues"
CI = "https://github.com/front-seat/voter-tools/actions"
